Move more stuff to config

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,3 +1,9 @@
 # https://www.playframework.com/documentation/latest/Configuration
 play.modules.enabled += "JobModule"
-jobs.frequency = 20
+
+schedulling {
+  hello {
+    frequency = 20
+    initialDelay = 0
+  }
+}
